@@ -1,6 +1,7 @@
 TheKabal (6 October 2013)
 --------------------------------------
 Redo "header.php" to also be template driven, to be used until a file is switched to use layout.tpl
+Redo "footer.php" to also be template driven, to be used until a file is switched to use template with layout.tpl
 
 TheMightyDude (05 October 2013)
 --------------------------------------
